--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 WuBook Python libs.
 
 This Library contains WuBook Python Common Libs, developed by
-WuBook Labs: http://wubook.net http://en.wubook.net/
+WuBook Labs: see http://wubook.net or http://en.wubook.net/
+
+WuBook labs develop Tourism Technologies, as Booking Online
+engine and channel manager services.
